Fixes for publications show pages on mobile
• align h2 to top of its attachment
• replace metadata dt's width percentage with ems for mobile

Re: task 34 https://www.pivotaltracker.com/story/show/65640954

--- a/app/assets/stylesheets/frontend/helpers/_attachment.scss
+++ b/app/assets/stylesheets/frontend/helpers/_attachment.scss
@@ -59,6 +59,13 @@ $thumbnail-width: 99px;
       margin: 0;
     }
 
+    h2 {
+      padding-top: 0;
+      @include media(tablet) {
+        padding-top: 7px;
+      }
+    }
+
     h3 {
       font-weight: bold;
     }
