--- a/app/assets/stylesheets/frontend/helpers/_headings.scss
+++ b/app/assets/stylesheets/frontend/helpers/_headings.scss
@@ -132,7 +132,7 @@
         @include bold;
         float: left;
         clear: left;
-        width: 40%;
+        width: 8em;
         @include media(tablet) {
           width: auto;
           min-width: ($gutter * 4);
